[PATCH] move "config SOUND" to sound/Kconfig
Allows all architectures to simply include the sound/Kconfig file.
Now somebody can finally update the comment for CONFIG_SOUND ;-).

--- a/arch/m68k/Kconfig
+++ b/arch/m68k/Kconfig
@@ -1199,15 +1199,7 @@ config UNIX98_PTY_COUNT
 
 endmenu
 
-
-menu "Sound support"
-
-config SOUND
-	tristate "Sound card support"
-
-source "sound/oss/dmasound/Kconfig"
-
-endmenu
+source "sound/Kconfig"
 
 source "fs/Kconfig"
 
