[ALPHA] Compressed kernel bootp images. Frim Jay Estabrook <Jay.Estabrook@compaq.com>.

--- a/arch/alpha/Makefile
+++ b/arch/alpha/Makefile
@@ -108,7 +108,7 @@ all boot: $(boot)/vmlinux.gz
 $(boot)/vmlinux.gz: vmlinux
 	$(Q)$(MAKE) -f scripts/Makefile.build obj=$(boot) $@
 
-bootimage bootpfile: vmlinux
+bootimage bootpfile bootpzfile: vmlinux
 	$(Q)$(MAKE) -f scripts/Makefile.build obj=$(boot) $(boot)/$@
 
 
@@ -129,4 +129,5 @@ define archhelp
   echo '* boot		- Compressed kernel image (arch/alpha/boot/vmlinux.gz)'
   echo '  bootimage	- SRM bootable image (arch/alpha/boot/bootimage)'
   echo '  bootpfile	- BOOTP bootable image (arch/alpha/boot/bootpfile)'
+  echo '  bootpzfile	- compressed kernel BOOTP image (arch/alpha/boot/bootpzfile)'
 endef
