--- a/arch/alpha/Kconfig
+++ b/arch/alpha/Kconfig
@@ -693,9 +693,13 @@ menu "Kernel hacking"
 
 config ALPHA_LEGACY_START_ADDRESS
 	bool "Legacy kernel start address"
+	depends on ALPHA_GENERIC
+	default n
 	---help---
 	  The 2.4 kernel changed the kernel start address from 0x310000
 	  to 0x810000 to make room for the Wildfire's larger SRM console.
+	  Recent consoles on Titan and Marvel machines also require the
+	  extra room.
 
 	  If you're using aboot 0.7 or later, the bootloader will examine the
 	  ELF headers to determine where to transfer control. Unfortunately,
@@ -704,7 +708,12 @@ config ALPHA_LEGACY_START_ADDRESS
 	  hard lockup.
 
 	  Say Y if you have a broken bootloader.  Say N if you do not, or if
-	  you wish to run on Wildfire.
+	  you wish to run on Wildfire, Titan, or Marvel.
+
+config ALPHA_LEGACY_START_ADDRESS
+	bool
+	depends on !ALPHA_GENERIC && !ALPHA_TITAN && !ALPHA_MARVEL && !ALPHA_WILDFIRE
+	default y
 
 config DEBUG_KERNEL
 	bool "Kernel debugging"
