--- a/drivers/pnp/Makefile
+++ b/drivers/pnp/Makefile
@@ -2,7 +2,7 @@
 # Makefile for the Linux Plug-and-Play Support.
 #
 
-obj-y		:= core.o card.o driver.o resource.o manager.o support.o interface.o quirks.o names.o system.o
+obj-y		:= core.o card.o driver.o resource.o manager.o support.o interface.o quirks.o system.o
 
 obj-$(CONFIG_PNPBIOS)		+= pnpbios/
 obj-$(CONFIG_ISAPNP)		+= isapnp/
