ACPI from 2.4: build: add ACPI_HT, delete ACPI_HT_ONLY boot: add acpi={force, off, ht}; delete "noht", "acpismp=" add DMI blacklist from UnitedLinux

--- a/drivers/acpi/Makefile
+++ b/drivers/acpi/Makefile
@@ -12,12 +12,13 @@ endif
 
 EXTRA_CFLAGS	+= $(ACPI_CFLAGS)
 
-obj-y		:= acpi_ksyms.o 
+obj-$(CONFIG_ACPI)		:= acpi_ksyms.o 
 
 #
 # ACPI Boot-Time Table Parsing
 #
-obj-$(CONFIG_ACPI_BOOT)		+= tables.o blacklist.o
+obj-$(CONFIG_ACPI_BOOT)		+= tables.o
+obj-$(CONFIG_ACPI)		+= blacklist.o
 
 #
 # ACPI Core Subsystem (Interpreter)
