--- a/drivers/acpi/Kconfig
+++ b/drivers/acpi/Kconfig
@@ -59,7 +59,7 @@ config ACPI_BOOT
 
 config ACPI_SLEEP
 	bool "Sleep States (EXPERIMENTAL)"
-	depends on X86 && ACPI && !ACPI_HT_ONLY && EXPERIMENTAL
+	depends on X86 && ACPI && PM && !ACPI_HT_ONLY && EXPERIMENTAL
 	---help---
 	  This option adds support for ACPI suspend states. 
 
