--- a/kernel/power/Makefile
+++ b/kernel/power/Makefile
@@ -1,4 +1,4 @@
-obj-y				:= process.o console.o pm.o
+obj-y				:= main.o process.o console.o pm.o
 obj-$(CONFIG_SOFTWARE_SUSPEND)	+= swsusp.o
 
 obj-$(CONFIG_MAGIC_SYSRQ)	+= poweroff.o
