[PATCH] firmware loader requires hotplug
From: Ramn Rey Vicente <ramon.rey@hispalinux.es>

Fix the config issue with the hotplug firmware loader.  The firmware loader
use hotplug, so this must be included as a dependency.

--- a/drivers/base/Kconfig
+++ b/drivers/base/Kconfig
@@ -2,6 +2,7 @@ menu "Generic Driver Options"
 
 config FW_LOADER
 	tristate "Hotplug firmware loading support"
+	depends on HOTPLUG
 	---help---
 	  This option is provided for the case where no in-kernel-tree modules
 	  require hotplug firmware loading support, but a module built outside
