--- a/drivers/char/agp/Kconfig
+++ b/drivers/char/agp/Kconfig
@@ -43,6 +43,12 @@ config AGP_ALI
 	  You should say Y here if you use XFree86 3.3.6 or 4.x and want to
 	  use GLX or DRI.  If unsure, say N.
 
+config AGP_ATI
+	tristate "ATI chipset support"
+	depends on AGP && X86
+	---help---
+
+
 config AGP_AMD
 	tristate "AMD Irongate, 761, and 762 chipset support"
 	depends on AGP && X86 && !X86_64
