--- a/drivers/char/agp/Kconfig
+++ b/drivers/char/agp/Kconfig
@@ -45,9 +45,13 @@ config AGP_ALI
 
 config AGP_ATI
 	tristate "ATI chipset support"
-	depends on AGP && X86
+	depends on AGP && X86 && !X86_64
 	---help---
+      This option gives you AGP support for the GLX component of
+      XFree86 4.x on the ATI RadeonIGP family of chipsets.
 
+      You should say Y here if you use XFree86 3.3.6 or 4.x and want to
+      use GLX or DRI.  If unsure, say N.
 
 config AGP_AMD
 	tristate "AMD Irongate, 761, and 762 chipset support"
