--- a/drivers/acpi/Kconfig
+++ b/drivers/acpi/Kconfig
@@ -6,7 +6,7 @@ menu "ACPI (Advanced Configuration and Power Interface) Support"
 
 config ACPI_HT
 	bool "ACPI Processor Enumeration for HT"
-	depends on (X86 && X86_LOCAL_APIC)
+	depends on X86
 	default y
 	---help---
 	  ACPI enumerates both logical (a.k.a. Hyper-Threaded -- HT)
