[ARM] Add Integrator IM/PD-1 module support for Integrator PP/2.

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -165,6 +165,8 @@ source "arch/arm/mach-epxa10db/Kconfig"
 
 source "arch/arm/mach-footbridge/Kconfig"
 
+source "arch/arm/mach-integrator/Kconfig"
+
 source "arch/arm/mach-iop3xx/Kconfig"
 
 source "arch/arm/mach-pxa/Kconfig"
