--- a/net/sctp/Kconfig
+++ b/net/sctp/Kconfig
@@ -43,7 +43,7 @@ config SCTP_ADLER32
 	bool "SCTP: Use old checksum (Adler-32)"
 	depends on IP_SCTP
 	help
-	  RCF2960 currently specifies the Adler-32 checksum algorithm for SCTP.
+	  RFC2960 currently specifies the Adler-32 checksum algorithm for SCTP.
 	  This has been deprecated and replaced by an algorithm now referred
 	  to as crc32c.
 
