Fix "make clean" in scripts/genksyms
Don't prepend $(obj) to "targets", since the generic rules will
do that for us, and doing it twice just makes things not work.

--- a/scripts/genksyms/Makefile
+++ b/scripts/genksyms/Makefile
@@ -44,4 +44,4 @@ clean-files	+= parse.output
 
 endif
 
-targets += $(obj)/keywords.c $(obj)/lex.c $(obj)/parse.c $(obj)/parse.h
+targets += keywords.c lex.c parse.c parse.h
